# Lighthouse

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMFTAspNet.sln  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  INSTALLATION.md  LEAN-CTX.md  LICENSE  Lighthouse.sln  README.md  SECURITY.md  license.json  opencode.json  private_key.pem  re  render.yaml
.claude/: settings.json
.githooks/: pre-commit  pre-push  sonar_gate.py
.github/: CSharpBackend.prompt.md  FUNDING.yml  PlaywrightTesting.prompt.md  ReactComponent.prompt.md  copilot-instructions.md  dependabot-automerge.yml  dependabot.yml
.nwave/: local-config.json
CMFTAspNet/: CMFTAspNet.csproj  CMFTAspNet.sln  Program.cs  appsettings.Development.json  appsettings.json
CMFTAspNet.Tests/: CMFTAspNet.Tests.csproj
Examples/: docker-compose.yml
Lighthouse.Backend/: .editorconfig  Create-DbBackup.ps1  Create-Migration.ps1  Directory.Build.props  Dockerfile  Lighthouse.Backend.csproj  Lighthouse.sln  Program.cs  Remove-LighthouseDb.ps1  Restore-DbBackup.ps1  appsettings.Development.json  appsettings.json  distribution-contract.json  distribution-contract.schema.json
Lighthouse.Backend.Tests/: Lighthouse.Backend.Tests.csproj
Lighthouse.EndToEndTests/: .eslintrc.js  (+7 more)
Lighthouse.Frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
Lighthouse.Frontend/src-tauri/binaries/: Lighthouse.Backend-x86_64-unknown-linux-gnu
Lighthouse.Frontend/src-tauri/capabilities/: default.json
Lighthouse.Frontend/src-tauri/src/: lib.rs  main.rs
(+4140 files in other folders)
