[package]
name = "lighthouse-standalone"
version = "0.1.0"
description = "Lighthouse Standalone Desktop Application"
edition = "2021"

[lib]
name = "lighthouse_standalone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"